z-index fix
navbar gotta z

--- a/styles/portfolio3.css
+++ b/styles/portfolio3.css
@@ -50,6 +50,7 @@ nav{
     margin-bottom:32px;
     padding: 10px 0px;
     position: fixed;
+    z-index: 1;
     width: 100%;
     background-color: #fff;
 }
